gcc/testsuite/gdc.test/compilable/test12567d.d
// REQUIRED_ARGS: -d
// PERMUTE_ARGS:
import imports.a12567;

void main() { foo(); }
